--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,1 +1,2 @@
-<%= @teacher.first_name %>, <%= @teacher.last_name %>
+<h1><%= @teacher.first_name %>, <%= @teacher.last_name %></h1>
+<h2><%= @teacher.position %></h2>
