--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,9 @@
 <div id="header" class="round">
   <ul class="navigation round">
     <li><%= link_to "Home", home_path %></li>
-    <li><%= link_to "Teachers", teachers_path %></li>
+    <li><%= link_to "Parents", parents_path %></li>
     <li><%= link_to "Students", students_path %></li>
+    <li><%= link_to "Teachers", teachers_path %></li>
   </ul>
 </div>
 
