--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -16,6 +16,7 @@
     <th>State</th>
     <th>Zip</th>
     <th>Show Cell</th>
+    <th>Mailing</th>
     <th>PTSA Member</th>
     <th>Publish</th>
     <th></th>
