--- a/app/views/layouts/_parent_form.erb
+++ b/app/views/layouts/_parent_form.erb
@@ -58,6 +58,6 @@
     <%= f.check_box :publish %><br />
   </div>
   <div class"actions">
-    <%= f.submit "OK" %>
+    <%= f.submit "Submit" %>
   </div>
 <% end %>
