--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -3,8 +3,8 @@
 <p><%= notice %></p>
 <table>
   <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
+    <th>id</th>
+    <th>Name</th>
     <th>Email</th>
     <th>Position</th>
     <th>Position Type</th>
@@ -13,7 +13,8 @@
 
 <% @teachers.each do |teacher| %>
     <tr>
-      <td><%=h teacher.first_name %></td>
+      <td><%=h teacher.id %></td>
+      <td><%=h "#{teacher.last_name}, #{teacher.first_name}" %></td>
       <td><%=h teacher.last_name %></td>
       <td><%=h teacher.email %></td>
       <td><%=h teacher.position %></td>
