--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,2 +1,13 @@
-<h1><%= @teacher.first_name %>, <%= @teacher.last_name %></h1>
-<h2><%= @teacher.position %></h2>
+<h1><%= @teacher.last_name %>, <%= @teacher.first_name %></h1>
+<dl>
+  <dt>Position</dt>
+  <dd><%= @teacher.position %></dd>
+  <dt>Position Type</dt>
+  <dd><%= @teacher.position_type %></dd>
+  <dt>Email</dt>
+  <dd><%= @teacher.email %></dd>
+  <dt>Location</dt>
+  <dd><%= @teacher.location %></dd>
+</dl>
+<h2>Students</h2>
+<%= render 'layouts/student_list' %>
