parent student relationship

--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -2,36 +2,4 @@
 <%= link_to 'New Parent', new_parent_path %>
 <p><%= notice %></p>
 
-<table>
-  <tr>
-    <th>id</th>
-    <th>Name</th>
-    <th>email</th>
-    <th>Home Phone</th>
-    <th>Cell Phone</th>
-    <th>Address Line 1</th>
-    <th>Address Line 2</th>
-    <th>City</th>
-    <th>State</th>
-    <th>Zip</th>
-    <th></th>
-  </tr>
-<% @parents.each do |parent| %>
-      <td><%=h parent.id %></td>
-      <td><%=h "#{parent.last_name}, #{parent.first_name}" %></td>
-      <td><%=h parent.email %></td>
-      <td><%=h parent.home_phone %></td>
-      <td><%=h parent.cell_phone %></td>
-      <td><%=h parent.address_line_1 %></td>
-      <td><%=h parent.address_line_2 %></td>
-      <td><%=h parent.city %></td>
-      <td><%=h parent.state %></td>
-      <td><%=h parent.zip %></td>
-      <td><%= link_to 'Show', parent %></td>
-      <td><%= link_to 'Edit', edit_parent_path(parent) %></td>
-      <td><%= link_to 'Delete', parent, :confirm => 'Are you sure?', :method => :delete %></td>
-    </tr>
-<% end %>
-</table>
-<br />
-
+<%= render 'layouts/parent_list' %>
