--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,31 +1,5 @@
 <h1>Teachers</h1>
 <%= link_to 'New Teacher', new_teacher_path %>
 <p><%= notice %></p>
-<table>
-  <tr>
-    <th>id</th>
-    <th>Name</th>
-    <th>Email</th>
-    <th>Position</th>
-    <th>Position Type</th>
-    <th>Location</th>
-  </tr>
 
-<% @teachers.each do |teacher| %>
-    <tr>
-      <td><%=h teacher.id %></td>
-      <td><%=h "#{teacher.last_name}, #{teacher.first_name}" %></td>
-      <td><%=h teacher.last_name %></td>
-      <td><%=h teacher.email %></td>
-      <td><%=h teacher.position %></td>
-      <td><%=h teacher.position_type %></td>
-      <td><%=h teacher.location %></td>
-      <td><%= link_to 'Show', teacher %></td>
-      <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-      <td><%= link_to 'Delete', teacher, :confirm => 'Are you sure?', :method => :delete %></td>
-    </tr>
-<% end %>
-</table>
-<br />
-
-      
+<%= render 'layouts/teacher_list' %>
