--- a/app/views/layouts/_parent_list.erb
+++ b/app/views/layouts/_parent_list.erb
@@ -14,7 +14,7 @@
   </tr>
 <% @parents.each do |parent| %>
       <td><%=h parent.id %></td>
-      <td><%=h parent.display_name %></td>
+      <td><%= link_to parent.display_name, parent %></td>
       <td><%=h parent.email %></td>
       <td><%=h parent.home_phone %></td>
       <td><%=h parent.cell_phone %></td>
@@ -23,7 +23,6 @@
       <td><%=h parent.city %></td>
       <td><%=h parent.state %></td>
       <td><%=h parent.zip %></td>
-      <td><%= link_to 'Show', parent %></td>
       <td><%= link_to 'Edit', edit_parent_path(parent) %></td>
       <td><%= link_to 'Delete', parent, :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
