--- a/app/views/ptsa_members/new.html.erb
+++ b/app/views/ptsa_members/new.html.erb
@@ -1,2 +1,2 @@
-<h1>PtsaMembers#new</h1>
-<p>Find me in app/views/ptsa_members/new.html.erb</p>
+<h1>New PTSA Member</h1>
+<%= render 'layouts/ptsa_member_form' %>
