--- a/app/views/layouts/_student_list.erb
+++ b/app/views/layouts/_student_list.erb
@@ -8,11 +8,10 @@
   </tr>
 <% @students.each do |student| %>
       <td><%=h student.id %></td>
-      <td><%=h student.display_name %></td>
+      <td><%= link_to student.display_name, student %></td>
       <td><%=h student.graduation_year %></td>
       <td><%=h student.grade %></td>
-      <td><%=h student.teacher.display_name %></td>
-      <td><%= link_to 'Show', student %></td>
+      <td><%= link_to student.teacher.display_name, student.teacher %></td>
       <td><%= link_to 'Edit', edit_student_path(student) %></td>
       <td><%= link_to 'Delete', student, :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
