--- a/app/views/layouts/_teacher_list.erb
+++ b/app/views/layouts/_teacher_list.erb
@@ -10,13 +10,12 @@
 
 <% @teachers.each do |teacher| %>
     <tr>
-      <td><%=h teacher.id %></td>
-      <td><%=h "#{teacher.display_name}" %></td>
-      <td><%=h teacher.email %></td>
-      <td><%=h teacher.position %></td>
-      <td><%=h teacher.position_type %></td>
-      <td><%=h teacher.location %></td>
-      <td><%= link_to 'Show', teacher %></td>
+      <td><%= teacher.id %></td>
+      <td><%= link_to teacher.display_name, teacher %></td>
+      <td><%= teacher.email %></td>
+      <td><%= teacher.position %></td>
+      <td><%= teacher.position_type %></td>
+      <td><%= teacher.location %></td>
       <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
       <td><%= link_to 'Delete', teacher, :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
