--- a/app/views/ptsa_members/edit.html.erb
+++ b/app/views/ptsa_members/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>PtsaMembers#edit</h1>
-<p>Find me in app/views/ptsa_members/edit.html.erb</p>
+<h1>Edit PTSA Member</h1>
+<%= render 'layouts/ptsa_member_form' %>
