--- a/app/views/ptsa_members/index.html.erb
+++ b/app/views/ptsa_members/index.html.erb
@@ -1,2 +1,4 @@
-<h1>PtsaMembers#index</h1>
-<p>Find me in app/views/ptsa_members/index.html.erb</p>
+<h1>PTSA Members</h1>
+<%= link_to 'New PTSA Member', new_ptsa_member_path %>
+<p><%= notice %></p>
+<%= render 'layouts/ptsa_member_list' %>
