--- a/app/views/ptsa_members/show.html.erb
+++ b/app/views/ptsa_members/show.html.erb
@@ -1,2 +1,12 @@
-<h1>PtsaMembers#show</h1>
-<p>Find me in app/views/ptsa_members/show.html.erb</p>
+<h1>Show PTSA Member</h1>
+<fieldset>
+<legend><%= "#{@ptsa_member.display_name}" %> - <%= link_to 'Edit', edit_ptsa_member_path(@ptsa_member) %></legend>
+<dl>
+  <dt>Position</dt>
+  <dd><%=h @ptsa_member.position %></dd>
+  <dt>Position Type</dt>
+  <dd><%=h @ptsa_member.position_type %></dd>
+  <dt>Email</dt>
+  <dd><%=h @ptsa_member.email %></dd>
+</dl>
+</fieldset>
