--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,14 +1,18 @@
-<h1><%=h "#{@student.display_name}" %></h1>
-<p><%= link_to 'Edit', edit_student_path(@student) %></p>
+<h1>Show Student</h1>
+<fieldset>
+<legend><%= "#{@student.display_name}" %> - <%= link_to 'Edit', edit_student_path(@student) %></legend>
 <dl>
   <dt>Graduation Year</dt>
-  <dd><%=h @student.graduation_year %></dd>
+  <dd><%= @student.graduation_year %></dd>
   <dt>Grade</dt>
-  <dd><%=h @student.grade %></dd> 
+  <dd><%= @student.grade %></dd> 
   <dt>Teacher</dt>
-  <dd><%=h @student.teacher.display_name %></dd> 
+  <dd><%= link_to @student.teacher.display_name, @student.teacher %></dd> 
   <dt>Room</dt>
-  <dd><%=h @student.teacher.location %></dd> 
+  <dd><%= @student.teacher.location %></dd> 
 </dl>
-<h2>Parents</h2>
+</fieldset>
+<fieldset>
+<legend>Parents</legend>
 <%= render 'layouts/parent_list' %>  
+</fieldset>
