--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Show Teacher</h1>
-<p><%= link_to 'Edit', edit_teacher_path(@teacher) %></p>
+<p><%= notice %></p>
 <fieldset>
 <legend><%= "#{@teacher.display_name}" %> - <%= link_to 'Edit', edit_teacher_path(@teacher) %></legend>
 <dl>
