--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Show Parent</h1>
+<p><%= notice %></p>
 <fieldset>
 <legend><%= "#{@parent.display_name}" %> - <%= link_to 'Edit', edit_parent_path(@parent) %></legend>
 <dl>
@@ -18,9 +19,8 @@
   <dd>PTSA Member: <b><%= @parent.ptsa_member %></b></dd>
   <dd>Publish in directory: <b><%= @parent.publish %></b></dd>
 </dl>
-</fieldset>
-
 <fieldset>
 <legend>Children</legend>
 <%= render 'layouts/student_list' %>
+</fieldset>
 </fieldset>
