--- a/app/views/ptsa_members/index.html.erb
+++ b/app/views/ptsa_members/index.html.erb
@@ -1,4 +1,7 @@
 <h1>PTSA Members</h1>
-<%= link_to 'New PTSA Member', new_ptsa_member_path %>
 <p><%= notice %></p>
-<%= render 'layouts/ptsa_member_list' %>
+<fieldset>
+  <legend>PTSA Member List</legend>
+  <p><%= link_to 'New PTSA Member', new_ptsa_member_path %></p>
+  <%= render 'layouts/ptsa_member_list' %>
+</fieldset>
