add grade to teacher

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
     <li><%= link_to "Students", students_path %></li>
     <li><%= link_to "Teachers", teachers_path %></li>
     <li><%= link_to "PTSA Members", ptsa_members_path %></li>
+    <li><%= link_to "Directory", directory_path %></li>
   </ul>
 </div>
 
