--- a/app/views/layouts/_teacher_form.erb
+++ b/app/views/layouts/_teacher_form.erb
@@ -19,6 +19,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :grade %><br />
+    <%= f.text_field :grade %><br />
+  </div>
+
+  <div class="field">
     <%= f.label :location %><br />
     <%= f.text_field :location %><br />
   </div>
