--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -2,6 +2,6 @@
 <p><%= notice %></p>
 <fieldset>
 <legend>Parent List</legend>
-<p><%= link_to 'New Parent', new_parent_path %></p>
+<p><b><%= link_to 'New Parent', new_parent_path %></b></p>
 <%= render 'layouts/parent_list' %>
 </fieldset>
