--- a/app/views/pages/directory.html.erb
+++ b/app/views/pages/directory.html.erb
@@ -90,24 +90,35 @@
 </table>
 
 <% @teachers_teacher.each do |teacher| %>
-  <b><%= teacher.display_name %> | <%= teacher.location %> | <%= teacher.grade %></b>
-  <table>
-  <% teacher.students.each do |student| %>  
-    <tr>
-      <td><%= student.display_name %></td>
-      <td><table>
+  <div class="span-24 last dir-container">
+    <div class="span-24 last dir-container-header" style="border-bottom-width:3px; border-top-width:3px; border-style: double;">
+      <div class="span-4">Room: <%= teacher.location %><br>Grade: <%= teacher.grade %></div>
+      <div class="span-12">Jane Addams K-8 2009-2010 Directory</div>
+      <div class="span-8 last">Teacher: <%= teacher.display_name %><br>email: <%= teacher.email %></div>
+    </div>
+    <div class="span-24 last dir-container-record" style="border-bottom-width:1px; border-style: solid;">
+      <div class="span-4"><b>Student</b></div>
+      <div class="span-4">Parents / Guardians</div>
+      <div class="span-3">Home Ph.</div>
+      <div class="span-7">Steet Address</div>
+      <div class="span-5">Emai Addresses</div>
+      <div class="span-1 last">Gr.</div>
+    </div>
+    <% teacher.students.each do |student| %>
+      <div class="span-24 last dir-container-record" style="border-bottom-width:1px; border-style: solid;">
+        <div class="span-4" ><%= student.display_name %></div>
+        <div class="span-19">
         <% student.parents.each do |parent| %>
-        <tr>
-          <td><%= parent.display_name %><td>
-          <td><%= parent.home_phone %><td>
-          <td><%= parent.cell_phone %><td>
-          <td><%= parent.address_line_1 %> <%= parent.address_line_2 %> <%= parent.city %> <%= parent.state %> <%= parent.zip %><td>
-          <td><%= parent.email %><td>
-        </tr>
+          <div class="span-19 last">
+            <div class="span-4"><%= parent.display_name %></div>
+            <div class="span-3" style="height:18px"><%= parent.home_phone %></div>
+            <div class="span-7"><%= "#{parent.address_line_1} #{parent.address_line_2} #{parent.city} #{parent.state} #{parent.zip}" %></div>
+            <div class="span-5 last"><%= parent.email %></div>
+          </div>
         <% end %>
-        </table></td>
-      <td><%= student.grade %>
-    </tr>
+        </div>
+        <div class="span-1 last"><%= student.grade %></div>
+      </div>
     <% end %>
-  </table>
+  </div>
 <% end %>
