--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= render 'layouts/stylesheets' %>
   </head>
   <body>
-    <div class="container showgrid">
+    <div class="container">
       <%= render 'layouts/header' %>
       <div id="content" class="round">
         <%= yield %>
